fix heading on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,9 @@ a{
   }
 }
 @media (max-width: 600px) { 
+  h1, #whatever, #sectionHead, #typed{
+    font-size:2.2rem;
+  }
 .listing{
   padding:0;
   grid-template-columns: 70fr 30fr;
